1. 部分细节处理